--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^9.21.0",
     "normalize.css": "^8.0.1",
     "prettier": "^2.8.8",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "sass": "^1.62.1",
