--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.5.1",
+    "monaco-graphql": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
