--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "firebase": "^9.21.0",
+    "i18next": "^22.4.15",
+    "i18next-http-backend": "^2.2.0",
     "normalize.css": "^8.0.1",
     "prettier": "^2.8.8",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "sass": "^1.62.1",
