--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "firebase": "^9.21.0",
     "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "normalize.css": "^8.0.1",
     "prettier": "^2.8.8",
