--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@graphql-tools/executor-http": "^0.1.10",
+    "@graphql-tools/wrap": "^9.4.2",
     "@monaco-editor/react": "^4.5.1",
+    "cm6-graphql": "^0.0.7",
+    "graphiql": "^2.4.4",
     "monaco-graphql": "^1.2.2",
     "normalize-scss": "^7.0.1",
     "react": "^18.2.0",
