--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.5.1",
+    "graphql": "^16.6.0",
     "monaco-graphql": "^1.2.2",
     "normalize-scss": "^7.0.1",
     "react": "^18.2.0",
