--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@graphql-tools/executor-http": "^0.1.10",
     "@graphql-tools/wrap": "^9.4.2",
     "@monaco-editor/react": "^4.5.1",
+    "@uiw/react-codemirror": "^4.20.2",
+    "@uiw/react-textarea-code-editor": "^2.1.1",
     "cm6-graphql": "^0.0.7",
+    "codemirror": "^5.65.13",
     "graphiql": "^2.4.4",
     "monaco-graphql": "^1.2.2",
     "normalize-scss": "^7.0.1",
