--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cm6-graphql": "^0.0.7",
     "codemirror": "^5.65.13",
     "graphiql": "^2.4.4",
+    "gsap": "^3.11.5",
     "monaco-graphql": "^1.2.2",
     "normalize-scss": "^7.0.1",
     "react": "^18.2.0",
